improved util and parsing
